<resources>
    <string name="app_name">Eg Services</string>
    <string name="settings">Settings</string>
    <string name="anglais">English</string>
    <string name="francais">French</string>
    <string name="dark_mode">Dark mode</string>
    <string name="ligth_mode">Day mode</string>
    <string name="hello_world">Hello World!</string>
    <string name="votre_adresse_mail">Your mail address</string>
    <string name="votre_mot_de_passe">Your password</string>
    <string name="cr_er_votre_compte">Create your account</string>
    <string name="mot_de_passe_oubli">Forgot your password</string>
    <string name="t_l_phone_de_l_utilisateur">User phone</string>
    <string name="email_de_l_utilisateur">User email address</string>
    <string name="poste_de_l_utilisateur">User extension</string>
    <string name="mode_affichage">Display mode (%s)</string>
    <string name="langues">Languages (%s)</string>
    <string name="annuler">Cancel</string>
    <string name="create_account">Creation of a user account</string>
    <string name="create_account_success">Creation of a successful user account</string>
    <string name="save_data_error">Error saving user infos</string>
    <string name="auth_failed">Error while authenticating user</string>
    <string name="account_connexion">Connection to the application</string>
    <string name="valider">validate</string>
    <string name="update_ok">Successful update</string>
    <string name="title_update_name">Change your name</string>
    <string name="title_update_phone">Change your phone</string>
    <string name="update">Edit</string>
    <string name="error_contenu">An error has occurred</string>
    <string name="recover">Forgot your password</string>
    <string name="envoie_mail">Send mail</string>
    <string name="email_sent">E-mail sent</string>
    <string name="error_email_sent">Error sending email</string>
    <string name="error_saisie_email">Error entering email address</string>
    <string name="error_saisie_password">Password entry error</string>
    <string name="a_propos">About</string>
    <string name="se_connecter">sign in</string>
    <string name="confirmez_votre_mot_de_passe">Confirm your password</string>
    <string name="votre_num_ro_de_cni">Your CNI number</string>
    <string name="votre_t_l_phone">Your phone</string>
    <string name="votre_nom_complet">Your full name</string>
    <string name="error_saisie_nom">Error entering user name</string>
    <string name="error_saisie_telephone">Phone entry error</string>
    <string name="error_saisie_cni">Error entering the CNI</string>
    <string name="error_saisie_confirm">Error confirming password</string>
    <string name="planning">Planning</string>
    <string name="devis">Quote</string>
    <string name="hello_world_planning">Planning</string>
    <string name="hello_blank_fragment_devis">Quote</string>
    <string name="ajouter_une_tache">Add a stain</string>
    <string name="ajouter_un_d_vis">Add a review</string>
    <string name="logout">Do you want to disconnect your account ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deconnexion">Logout</string>
    <string name="no_post">No workstation defined</string>
    <string name="calendrier">Calendar</string>
    <string name="error_saisie_quartier">Neighborhood entry error</string>
    <string name="you_locate">Your area of residence</string>
    <string name="eg_services_by_deone">Eg Services by Deone</string>
    <string name="cni_de_l_utilisateur">User CNI</string>
    <string name="nom_de_l_utilisateur">Username</string>
    <string name="quartier_de_l_utilisateur">User neighborhood</string>
    <string name="description_de_la_t_che">Description of the task</string>
    <string name="employer">To employ</string>
    <string name="dur_e_de_la_t_che">Duration of the task</string>
    <string name="titre_de_la_t_che">Job title</string>
    <string name="error_saisie_titre">Error when entering the job title</string>
    <string name="error_saisie_duree">Time entry error</string>
    <string name="error_saisie_employer">User input error</string>
    <string name="error_saisie_description">Error entering description</string>
    <string name="create_tache">Creating a new task</string>
    <string name="create_new_task_success">Task create successfully</string>
    <string name="save_task_error">Error while creating a task</string>
    <string name="edit_vatar">Edit Avatar</string>
    <string name="edit_nom">Edit Name</string>
    <string name="edit_phone">Edit Phone</string>
    <string name="edit_cni">Edit CNI</string>
    <string name="edit_poste">Edit Poste</string>
    <string name="edit_quartier">Edit Quartier</string>
    <string name="choose_action">Choose Action</string>
    <string name="update_key">Update %s</string>
    <string name="enter_key">Enter %s</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_key">Please enter  %s</string>
    <string name="updated">Updated...</string>
    <string name="delete_account">Delete account</string>
    <string name="update_id_employee">Initialisation des informations de l\'employer</string>
</resources>