<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/tx200dp"
        android:layout_height="@dimen/tx200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/vipcall" />

    <RelativeLayout
        android:layout_below="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fabConnexion"
        android:gravity="center">

        <EditText
            android:id="@+id/edtvAdresseMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tx20dp"
            android:layout_marginEnd="@dimen/tx20dp"
            android:background="@drawable/edtv_bg"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/tx10dp"
            android:hint="@string/votre_adresse_mail"
            android:inputType="textEmailAddress"
            android:padding="@dimen/tx20dp"
            android:textSize="@dimen/tx14sp" />

        <EditText
            android:id="@+id/edtvMotdepasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtvAdresseMail"
            android:layout_marginStart="@dimen/tx20dp"
            android:layout_marginTop="@dimen/tx10dp"
            android:layout_marginEnd="@dimen/tx20dp"
            android:background="@drawable/edtv_bg"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/tx10dp"
            android:hint="@string/votre_mot_de_passe"
            android:inputType="textPassword"
            android:padding="@dimen/tx20dp"
            android:textSize="@dimen/tx14sp" />

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtvMotdepasse"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/tx10dp"
            android:layout_marginEnd="@dimen/tx20dp"
            android:text="@string/mot_de_passe_oubli"
            android:textColor="@color/rouge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNouveauCompte"
            android:layout_below="@+id/tvForgetPassword"
            android:textColor="@color/vert"
            android:text="@string/cr_er_votre_compte"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/tx10dp"
            android:layout_marginEnd="@dimen/tx20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--<com.google.android.gms.common.SignInButton
            android:id="@+id/googleSign"
            android:layout_below="@+id/tvNouveauCompte"
            android:text="@string/cr_er_votre_compte"
            android:layout_marginTop="@dimen/tx10dp"
            android:layout_marginEnd="@dimen/tx20dp"
            android:layout_marginStart="@dimen/tx20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>-->

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/ic_action_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>